--- a/Contents/Homepage.html
+++ b/Contents/Homepage.html
@@ -12,7 +12,7 @@
             <h1 class="logo">HOME</h1>
             <div class="toggle triggerJS"></div>
             </header>
-            <video src="/Assests/New video2.mp4" muted loop autoplay></video>
+            <video src="Assests/New video2.mp4" muted loop autoplay></video>
             <div class="overlay"></div>
             <div class="text">
             <h2>Odyssey Space Travels</h2>
